RESOLVED FIXED70872
REGRESSION (r93108): Shadow DOM media controls should not be created for plug-in backed media elements.
https://bugs.webkit.org/show_bug.cgi?id=70872
Summary REGRESSION (r93108): Shadow DOM media controls should not be created for plug...
Andy Estes
Reported 2011-10-25 23:12:43 PDT
REGRESSION (r93108): Shadow DOM media controls created for plug-in backed media elements.
Attachments
Patch (2.74 KB, patch)
2011-10-25 23:20 PDT, Andy Estes
eric.carlson: review+
Andy Estes
Comment 1 2011-10-25 23:20:20 PDT
Eric Carlson
Comment 2 2011-10-26 07:26:03 PDT
Comment on attachment 112456 [details] Patch Thanks!
Andy Estes
Comment 3 2011-10-26 11:41:36 PDT
Note You need to log in before you can comment on or make changes to this bug.